deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
  namespace: testapp-ns
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - name: testapp
          image: 758210838432.dkr.ecr.us-west-2.amazonaws.com/test-app:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /test/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /test/health
              port: 8080
            initialDelaySeconds: 70
            timeoutSeconds: 10
            failureThreshold: 10
